Socket.io Chat App | Basic increment counter button with client server communication

--- a/12-Socket-Chat-App/public/index.html
+++ b/12-Socket-Chat-App/public/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Socket.io Chat App</h1>
+    <button id="increment">+1</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
 </body>
