Socket.io Chat App | Chat message events

--- a/12-Socket-Chat-App/public/index.html
+++ b/12-Socket-Chat-App/public/index.html
@@ -7,8 +7,13 @@
     <title>Socket.io Chat App</title>
 </head>
 <body>
-    <h1>Socket.io Chat App</h1>
-    <button id="increment">+1</button>
+    Chat App
+
+    <form id="message-form">
+        <input name="message" type="text" placeholder="Type your message..">
+        <button>Send</button>
+    </form>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
 </body>
