--- a/12-Socket-Chat-App/public/index.html
+++ b/12-Socket-Chat-App/public/index.html
@@ -13,7 +13,7 @@
         <input name="message" type="text" placeholder="Type your message..">
         <button>Send</button>
     </form>
-
+    <button id="send-location">Send Location</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
 </body>
