Socket.io Chat App | Chat Message input box - Required and Autocomplete off.

--- a/12-Socket-Chat-App/public/chat.html
+++ b/12-Socket-Chat-App/public/chat.html
@@ -18,7 +18,7 @@
 
             <div class="compose">
                 <form id="message-form">
-                    <input name="message" type="text" placeholder="Type your message..">
+                    <input name="message" type="text" placeholder="Type your message.." required autocomplete="off">
                     <button>Send</button>
                 </form>
                 <button id="send-location">Send Location</button>
