Socket.io Chat App | Send admin message when foul language is detected.

--- a/12-Socket-Chat-App/public/index.html
+++ b/12-Socket-Chat-App/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="centered-form">
         <div class="centered-form__box">
-            <h1>Join</h1>
+            <h1>Join Chat Room</h1>
             <form action="/chat.html">
                 <label>Display Name</label>
                 <input type="text" name="username" placeholder="Display Name" required>
